--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,13 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     
+    env:
+      AWS_KEY: ${{ secrets.AWS_KEY }}
+    
     steps:
       - run: sudo apt install openssh-client
       - run: eval $(ssh-agent -s)
-      - run: echo $'AWS_KEY' | tr -d '\r' | ssh-add -
+      - run: echo '$AWS_KEY' | tr -d '\r' | ssh-add -
       - run: mkdir -p ~/.ssh
       - run: chmod 700 ~/.ssh
       - run: ssh -o StrictHostKeyChecking=no ubuntu@44.203.55.154 "cd ~/public_html && rm -rf static/"
